# claude-provider-switch

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  profile.rs
src/command/: add.rs  current.rs  delete.rs  diff.rs  edit.rs  list.rs  mod.rs  use_profile.rs
src/store/: io.rs  keys.rs  merge.rs  mod.rs  path.rs
tests/: integration.rs
